--- a/src/main/java/Test/Receipt.form
+++ b/src/main/java/Test/Receipt.form
@@ -113,9 +113,10 @@
         <Component class="javax.swing.JTable" name="jTable_Receipt">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="0">
+              <Table columnCount="7" rowCount="0">
                 <Column editable="false" title="&#xbc88;&#xd638;" type="java.lang.String"/>
                 <Column editable="true" title="&#xc8fc;&#xbb38;&#xace0;&#xac1d;" type="java.lang.String"/>
+                <Column editable="true" title="&#xc74c;&#xc2dd;&#xc885;&#xb958;" type="java.lang.String"/>
                 <Column editable="false" title="&#xc74c;&#xc2dd;&#xba85;" type="java.lang.String"/>
                 <Column editable="false" title="&#xac00;&#xaca9;" type="java.lang.Integer"/>
                 <Column editable="false" title="&#xc8fc;&#xbb38;&#xc218;&#xb7c9;" type="java.lang.Integer"/>
@@ -124,6 +125,11 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
